--- a/UnitTestProject1/packages.config
+++ b/UnitTestProject1/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
-  <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
+  <package id="MSTest.TestAdapter" version="2.2.5" targetFramework="net472" />
+  <package id="MSTest.TestFramework" version="2.2.5" targetFramework="net472" />
+  <package id="NUnit" version="3.13.2" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net472" />
+  <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net472" />
+  <package id="Selenium.Firefox.WebDriver" version="0.27.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="91.0.4472.10100" targetFramework="net472" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.29.1" targetFramework="net472" />
 </packages>
